--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,6 +13,11 @@ body {
     background-color: #c7cdd3;
 }
 
+h2 {
+    position: absolute;
+    bottom: 30px;
+}
+
 .card {
     width: 120px;
     height: 120px;
